暂时隐藏学校和联系方式
暂时隐藏学校和联系方式

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3 contenteditable="true">乐山师范学院 - 软件工程专业（本科）2015-2019</h3>
+                        <h3 contenteditable="true">某师范学院 - 软件工程专业（本科）2015-2019</h3>
                         <p contenteditable="true">在校期间，多次获得国家奖学金、校长奖学金；</p><p contenteditable="true">专业成绩排名年级前10，积极参加各种校级、院级活动；曾多次获得校级运动会奖牌；</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
