--- a/2index.html
+++ b/2index.html
@@ -49,7 +49,7 @@
                     <li>
                         <label class="left-label" contenteditable="true">邮箱</label><span class="label-value" contenteditable="true">1264538441@qq.com</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <label class="left-label" contenteditable="true">个人主页</label><span class="label-value" contenteditable="true">www.liaow0316.com（没怎么用）</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">个人主页</label><span class="label-value" contenteditable="true">www.liaow0316.com（个人博客）</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">Github</label><span class="label-value" contenteditable="true">没怎么用。</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
@@ -87,7 +87,7 @@
                         <label class="left-label" contenteditable="true">后端</label><span class="label-value" contenteditable="true">Struts2、Spring4、SpringMVC、Hibernate、Mybatis、Node.js、MySQL、SQL Server</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">版本控制</label><span class="label-value" contenteditable="true">SVN、Git</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li><li>
-                        <label class="left-label" contenteditable="true">注意</label><span class="label-value" contenteditable="true"><span style="display: inline !important;"><h6>技术栈内容纯属瞎编……</h6></span></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">其他</label><span class="label-value" contenteditable="true"><span style="display: inline !important;">全部都是基本会用的水平。或许问到了还需要现查……</span></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
             </div>
 
@@ -158,12 +158,7 @@
                     <li>
                         <h3 contenteditable="true">英语四级证书</h3>
                         <p contenteditable="true">
-                            这个证书说明，我还是掌握基本英语了的，基础英语是没有问题的。<div><br></div></p>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
-                    <li>
-                        <h3 contenteditable="true">其他证书</h3>
-                        <p contenteditable="true">
-                            其他的校园内的证书20+张，我也在这厚着脸皮提一下了。</p>
+                            这个证书说明，我还是掌握基本英语了的，基础英语是没有问题的。</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>                   
             </div>
@@ -171,7 +166,7 @@
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p contenteditable="true">
-                    当前对自我的评价包括以下几点：<div>&nbsp; &nbsp; &nbsp;1、有一定的动手能力，遇到问题喜欢自己百度、查资料、或者自己进行试验；</div><div>&nbsp; &nbsp; &nbsp;2、有少许的团队协作经验，对各司其职，各尽其力表示了解。</div><div>&nbsp; &nbsp; &nbsp;3、工作认真负责、工作态度端正；</div><div>&nbsp; &nbsp; &nbsp;4、沟通交流能力良好，表达清晰；</div><div>&nbsp; &nbsp; &nbsp;5、虚心低调，不打断他人，喜欢跑步、打羽毛球等运动。<br><div><br></div></div></p>
+                    当前对自我的评价包括以下几点：<div>&nbsp; &nbsp; &nbsp;1、动手能力较强，喜欢自己百度、查资料、或者自己进行试验研究问题；当然，百度帮我解决了大部分问题。</div><div>&nbsp; &nbsp; &nbsp;2、团队协作能力强，曾带领小组一起进行小项目开发，对整个项目框架的搭建、任务的安排，比较熟悉；能够实现一个小型项目的基本功能，排查问题的能力可靠。</div><div>&nbsp; &nbsp; &nbsp;3、工作认真负责、工作态度端正；小组协同开发过程，每天按照团队开发规范，要求大家每天提交当天的工作日志到svn，每天认真阅读大家的工作日志</div><div>&nbsp; &nbsp; &nbsp;4、沟通交流能力良好，对抽象、复杂的问题加以确定的、简单的例子进行解释，能够在表达过程中，将大问题切分成小问题，确保能将问题描述清楚</div><div>&nbsp; &nbsp; &nbsp;5、遇到问题虚心求教，不打断他人，为人乐观积极，健康向上，喜欢运动，例如跑步、打羽毛球等等。<br><div><br></div></div></p>
             </div>
         </div>
     </div>
