--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait"></div>
-                <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <h3>请输入图片URL地址：</h3>
-                    <br/>
-                    <input type="text" id="avatar-url">
-                    <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
-                </div>
+                <div class="portrait" style="background-image: url(&quot;images/IMG_20180323_185158.jpg&quot;);"></div>
                 <h1 id="username" >liaow</h1>
                 <h4 id="persona-tag" >Java / Web / 实习生</h4>
             </div>
