--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait" style="background-image: url(&quot;images/IMG_20180323_185158.jpg&quot;);"></div>
+                <div class="portrait" style="background-image: url(&quot;images/IMG_20180323_185158.png&quot;);"></div>
                 <h1 id="username" >liaow</h1>
                 <h4 id="persona-tag" >Java / Web / 实习生</h4>
             </div>
