改变一些浮夸的地方

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">Javascript</label>
-                        <progress value="47.65624999999999" max="100"></progress>
+                        <progress value="31" max="100"></progress>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">MySQL</label>
@@ -78,10 +78,10 @@
                         <label class="left-label" contenteditable="true">前端</label><span class="label-value" contenteditable="true">HTML、CSS3、jQuery、layUI、BootStrap3</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     
                     <li>
-                        <label class="left-label" contenteditable="true">后端</label><span class="label-value" contenteditable="true">Struts2、Spring4、SpringMVC、Hibernate、Mybatis、Node.js、MySQL、SQL Server</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">后端</label><span class="label-value" contenteditable="true">Struts2、Spring4、SpringMVC、Hibernate、Mybatis、MySQL、SQL Server</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">版本控制</label><span class="label-value" contenteditable="true">SVN、Git</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li><li>
-                        <label class="left-label" contenteditable="true">注意</label><span class="label-value" contenteditable="true"><span style="display: inline !important;"><h6>技术栈内容纯属瞎编……</h6></span></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">注意</label><span class="label-value" contenteditable="true"><span style="display: inline !important;"><h6>以上大部分属于搬砖水平……</h6></span></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
             </div>
 
@@ -127,7 +127,7 @@
                 <ul class="experience-list">
                     <li>
                         <h3 contenteditable="true">基于C#的IP登录认证服务程序</h3>
-                        <p contenteditable="true">这是一个国家级的创新创业项目，用于解决IP登录客户端登录环境的一键配置和修复。目前已经发表论文，注册软件著作权，4人合作开发，并不是第一作者，但是是主要开发人员</p>
+                        <p contenteditable="true">这是一个国家级的创新创业项目，用于解决IP登录客户端登录环境的一键配置和修复。目前已经发表论文，注册软件著作权，4人合作开发，并不是第一作者，但是是主要开发人员，内容展示在：http://liaow0316.com:8080/Dr.com/index.html</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">基于SSH框架的网上书城项目</h3>
